# internal/services/types/types.go
@@ -1,1 +1,6 @@
 package types
+
+type CatResponse struct {
+	ID   int    `json:"id"`
+	Name string `json:"name"`
+}
